--- a/appsettings.json
+++ b/appsettings.json
@@ -3,8 +3,15 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.EntityFrameworkCore.Query": "Information",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
+
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "AppMvc": "Server=.\\SQLEXPRESS; Database=AppMVC; User ID=SA;Password=123456"
+  }
 }
