--- a/AppMVC.csproj
+++ b/AppMVC.csproj
@@ -5,11 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Contact\Data\" />
+    <Folder Include="Areas\Contact\Models\" />
     <Folder Include="Areas\Database\Data\" />
     <Folder Include="Areas\Database\Models\" />
     <Folder Include="Areas\ProductManager\Data\" />
     <Folder Include="Areas\ProductManager\Models\" />
     <Folder Include="Views\Product\" />
+    <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\planet\" />
   </ItemGroup>
 
